--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Hsource39/movieQl#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3",
     "node-fetch": "^2.6.1"
   },
